[gd_scene load_steps=22 format=2]

[ext_resource path="res://Resources/Imgs/UI/icons/shop1.png" type="Texture" id=1]
[ext_resource path="res://Resources/Imgs/UI/icons/refresh1.png" type="Texture" id=2]
[ext_resource path="res://Resources/Font/Default.tres" type="DynamicFont" id=3]
[ext_resource path="res://Resources/Font/Titles.tres" type="DynamicFont" id=4]
[ext_resource path="res://Resources/Imgs/UI/heart.png" type="Texture" id=5]
[ext_resource path="res://Resources/Imgs/UI/icons/home.png" type="Texture" id=6]
[ext_resource path="res://Resources/Imgs/UI/jumping2.png" type="Texture" id=7]
[ext_resource path="res://Resources/Imgs/UI/coins.png" type="Texture" id=8]
[ext_resource path="res://Scenes/POPUP/POPUP_BTN_pressed.tres" type="StyleBox" id=9]
[ext_resource path="res://Resources/Imgs/UI/enemy.png" type="Texture" id=10]
[ext_resource path="res://Resources/Imgs/UI/POPUP.png" type="Texture" id=11]
[ext_resource path="res://Resources/Imgs/UI/icons/play1.png" type="Texture" id=12]
[ext_resource path="res://Resources/Imgs/UI/score_flag.png" type="Texture" id=13]
[ext_resource path="res://Resources/Imgs/UI/star_3.png" type="Texture" id=14]
[ext_resource path="res://Scenes/POPUP/POPUP_BTN.tres" type="StyleBox" id=15]
[ext_resource path="res://Scenes/MODAL/MODAL.tscn" type="PackedScene" id=16]
[ext_resource path="res://Scenes/POPUP/POPUP.gd" type="Script" id=17]

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 11 )
region_rect = Rect2( 0, 0, 16, 16 )
margin_left = 4.0
margin_right = 4.0
margin_top = 4.0
margin_bottom = 4.0

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="Animation" id=3]
resource_name = "POPUP_IN"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 0.29, 1 ),
"update": 0,
"values": [ Color( 0.0784314, 0.0941176, 0.180392, 0 ), Color( 0.0784314, 0.0941176, 0.180392, 0.784314 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Panel:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 0.29, 1 ),
"update": 0,
"values": [ Vector2( 16, -160 ), Vector2( 16, 48 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "POPUP_OUT"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 0.29, 0.29 ),
"update": 0,
"values": [ Color( 0.0784314, 0.0941176, 0.180392, 0.784314 ), Color( 0.0784314, 0.0941176, 0.180392, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Panel:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 0.29, 0.29 ),
"update": 0,
"values": [ Vector2( 16, 48 ), Vector2( 16, -160 ) ]
}

[node name="POPUP" type="ColorRect"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0784314, 0.0941176, 0.180392, 0 )
script = ExtResource( 17 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
margin_left = 16.0
margin_top = -160.0
margin_right = 128.0
rect_min_size = Vector2( 112, 160 )
mouse_filter = 1
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 2
custom_constants/margin_top = 2
custom_constants/margin_left = 2
custom_constants/margin_bottom = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
margin_left = 2.0
margin_top = 2.0
margin_right = 110.0
margin_bottom = 158.0
rect_clip_content = true
custom_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SCORE" type="MarginContainer" parent="Panel/MarginContainer/VBoxContainer"]
margin_right = 108.0
margin_bottom = 39.0
custom_constants/margin_top = 3

[node name="Flag" type="TextureRect" parent="Panel/MarginContainer/VBoxContainer/SCORE"]
margin_top = 3.0
margin_right = 108.0
margin_bottom = 39.0
texture = ExtResource( 13 )
stretch_mode = 4

[node name="stars" type="TextureRect" parent="Panel/MarginContainer/VBoxContainer/SCORE/Flag"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 14 )
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PAUSED" type="MarginContainer" parent="Panel/MarginContainer/VBoxContainer"]
visible = false
margin_top = 39.0
margin_right = 108.0
margin_bottom = 57.0
custom_constants/margin_top = 4
custom_constants/margin_bottom = 4

[node name="Label" type="Label" parent="Panel/MarginContainer/VBoxContainer/PAUSED"]
margin_top = 4.0
margin_right = 108.0
margin_bottom = 14.0
custom_colors/font_color = Color( 0.168627, 0.168627, 0.270588, 1 )
custom_colors/font_color_shadow = Color( 0.45098, 0.466667, 0.427451, 1 )
custom_constants/shadow_offset_x = 0
custom_fonts/font = ExtResource( 4 )
text = "PAUSED"
align = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
margin_top = 39.0
margin_right = 108.0
margin_bottom = 122.0
size_flags_vertical = 3
custom_constants/separation = 0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HP" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer/VBoxContainer"]
margin_top = 4.0
margin_right = 108.0
margin_bottom = 20.0
custom_constants/separation = 3
alignment = 1

[node name="TextureRect" type="TextureRect" parent="Panel/MarginContainer/VBoxContainer/VBoxContainer/HP"]
margin_left = 30.0
margin_right = 46.0
margin_bottom = 16.0
texture = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="x" type="Label" parent="Panel/MarginContainer/VBoxContainer/VBoxContainer/HP"]
margin_left = 49.0
margin_top = 5.0
margin_right = 56.0
margin_bottom = 10.0
custom_colors/font_color = Color( 0.168627, 0.168627, 0.270588, 1 )
custom_fonts/font = ExtResource( 3 )
text = "X"

[node name="value" type="Label" parent="Panel/MarginContainer/VBoxContainer/VBoxContainer/HP"]
margin_left = 59.0
margin_top = 5.0
margin_right = 77.0
margin_bottom = 10.0
custom_colors/font_color = Color( 0.168627, 0.168627, 0.270588, 1 )
custom_fonts/font = ExtResource( 3 )
text = "230"

[node name="JP" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer/VBoxContainer"]
margin_top = 20.0
margin_right = 108.0
margin_bottom = 36.0
custom_constants/separation = 3
alignment = 1

[node name="TextureRect" type="TextureRect" parent="Panel/MarginContainer/VBoxContainer/VBoxContainer/JP"]
margin_left = 31.0
margin_right = 47.0
margin_bottom = 16.0
texture = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="x" type="Label" parent="Panel/MarginContainer/VBoxContainer/VBoxContainer/JP"]
margin_left = 50.0
margin_top = 5.0
margin_right = 57.0
margin_bottom = 10.0
custom_colors/font_color = Color( 0.168627, 0.168627, 0.270588, 1 )
custom_fonts/font = ExtResource( 3 )
text = "X"

[node name="value" type="Label" parent="Panel/MarginContainer/VBoxContainer/VBoxContainer/JP"]
margin_left = 60.0
margin_top = 5.0
margin_right = 77.0
margin_bottom = 10.0
custom_colors/font_color = Color( 0.168627, 0.168627, 0.270588, 1 )
custom_fonts/font = ExtResource( 3 )
text = "137"

[node name="KP" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer/VBoxContainer"]
margin_top = 36.0
margin_right = 108.0
margin_bottom = 52.0
custom_constants/separation = 3
alignment = 1

[node name="TextureRect" type="TextureRect" parent="Panel/MarginContainer/VBoxContainer/VBoxContainer/KP"]
margin_left = 33.0
margin_right = 49.0
margin_bottom = 16.0
texture = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="x" type="Label" parent="Panel/MarginContainer/VBoxContainer/VBoxContainer/KP"]
margin_left = 52.0
margin_top = 5.0
margin_right = 59.0
margin_bottom = 10.0
custom_colors/font_color = Color( 0.168627, 0.168627, 0.270588, 1 )
custom_fonts/font = ExtResource( 3 )
text = "X"

[node name="value" type="Label" parent="Panel/MarginContainer/VBoxContainer/VBoxContainer/KP"]
margin_left = 62.0
margin_top = 5.0
margin_right = 74.0
margin_bottom = 10.0
custom_colors/font_color = Color( 0.168627, 0.168627, 0.270588, 1 )
custom_fonts/font = ExtResource( 3 )
text = "55"

[node name="CP" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer/VBoxContainer"]
margin_top = 52.0
margin_right = 108.0
margin_bottom = 68.0
custom_constants/separation = 3
alignment = 1

[node name="TextureRect" type="TextureRect" parent="Panel/MarginContainer/VBoxContainer/VBoxContainer/CP"]
margin_left = 30.0
margin_right = 46.0
margin_bottom = 16.0
texture = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="x" type="Label" parent="Panel/MarginContainer/VBoxContainer/VBoxContainer/CP"]
margin_left = 49.0
margin_top = 5.0
margin_right = 56.0
margin_bottom = 10.0
custom_colors/font_color = Color( 0.168627, 0.168627, 0.270588, 1 )
custom_fonts/font = ExtResource( 3 )
text = "X"

[node name="value" type="Label" parent="Panel/MarginContainer/VBoxContainer/VBoxContainer/CP"]
margin_left = 59.0
margin_top = 5.0
margin_right = 77.0
margin_bottom = 10.0
custom_colors/font_color = Color( 0.168627, 0.168627, 0.270588, 1 )
custom_fonts/font = ExtResource( 3 )
text = "999"

[node name="Total" type="Label" parent="Panel/MarginContainer/VBoxContainer/VBoxContainer"]
margin_top = 68.0
margin_right = 108.0
margin_bottom = 78.0
custom_colors/font_color = Color( 0.168627, 0.168627, 0.270588, 1 )
custom_fonts/font = ExtResource( 4 )
text = "1562"
align = 1

[node name="MarginContainer2" type="MarginContainer" parent="Panel/MarginContainer/VBoxContainer"]
margin_top = 122.0
margin_right = 108.0
margin_bottom = 156.0
custom_constants/margin_top = 3
custom_constants/margin_bottom = 3

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer/MarginContainer2"]
margin_top = 3.0
margin_right = 108.0
margin_bottom = 31.0
custom_constants/separation = 2
alignment = 1

[node name="Home" type="Button" parent="Panel/MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer"]
margin_left = 3.0
margin_right = 27.0
margin_bottom = 28.0
rect_min_size = Vector2( 24, 28 )
custom_colors/font_color_disabled = Color( 1, 0.321569, 0.466667, 1 )
custom_colors/font_color = Color( 1, 0.321569, 0.466667, 1 )
custom_colors/font_color_hover = Color( 1, 0.321569, 0.466667, 1 )
custom_colors/font_color_pressed = Color( 1, 0.321569, 0.466667, 1 )
custom_constants/hseparation = 0
custom_fonts/font = ExtResource( 3 )
custom_styles/hover = ExtResource( 15 )
custom_styles/pressed = ExtResource( 9 )
custom_styles/focus = SubResource( 2 )
custom_styles/disabled = ExtResource( 15 )
custom_styles/normal = ExtResource( 15 )
icon = ExtResource( 6 )
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Shop" type="Button" parent="Panel/MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer"]
margin_left = 29.0
margin_right = 53.0
margin_bottom = 28.0
rect_min_size = Vector2( 24, 28 )
custom_colors/font_color_disabled = Color( 1, 0.321569, 0.466667, 1 )
custom_colors/font_color = Color( 1, 0.321569, 0.466667, 1 )
custom_colors/font_color_hover = Color( 1, 0.321569, 0.466667, 1 )
custom_colors/font_color_pressed = Color( 1, 0.321569, 0.466667, 1 )
custom_constants/hseparation = 0
custom_fonts/font = ExtResource( 3 )
custom_styles/hover = ExtResource( 15 )
custom_styles/pressed = ExtResource( 9 )
custom_styles/focus = SubResource( 2 )
custom_styles/disabled = ExtResource( 15 )
custom_styles/normal = ExtResource( 15 )
icon = ExtResource( 1 )
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Restart" type="Button" parent="Panel/MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer"]
margin_left = 55.0
margin_right = 79.0
margin_bottom = 28.0
rect_min_size = Vector2( 24, 28 )
custom_colors/font_color_disabled = Color( 1, 0.321569, 0.466667, 1 )
custom_colors/font_color = Color( 1, 0.321569, 0.466667, 1 )
custom_colors/font_color_hover = Color( 1, 0.321569, 0.466667, 1 )
custom_colors/font_color_pressed = Color( 1, 0.321569, 0.466667, 1 )
custom_constants/hseparation = 0
custom_fonts/font = ExtResource( 3 )
custom_styles/hover = ExtResource( 15 )
custom_styles/pressed = ExtResource( 9 )
custom_styles/focus = SubResource( 2 )
custom_styles/disabled = ExtResource( 15 )
custom_styles/normal = ExtResource( 15 )
icon = ExtResource( 2 )
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Continue" type="Button" parent="Panel/MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer"]
margin_left = 81.0
margin_right = 105.0
margin_bottom = 28.0
rect_min_size = Vector2( 24, 28 )
custom_colors/font_color_disabled = Color( 1, 0.321569, 0.466667, 1 )
custom_colors/font_color = Color( 1, 0.321569, 0.466667, 1 )
custom_colors/font_color_hover = Color( 1, 0.321569, 0.466667, 1 )
custom_colors/font_color_pressed = Color( 1, 0.321569, 0.466667, 1 )
custom_constants/hseparation = 0
custom_fonts/font = ExtResource( 3 )
custom_styles/hover = ExtResource( 15 )
custom_styles/pressed = ExtResource( 9 )
custom_styles/focus = SubResource( 2 )
custom_styles/disabled = ExtResource( 15 )
custom_styles/normal = ExtResource( 15 )
icon = ExtResource( 12 )
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MODAL" parent="." instance=ExtResource( 16 )]
mouse_filter = 2
color = Color( 0.0784314, 0.0941176, 0.180392, 0 )

[node name="aPlayer" type="AnimationPlayer" parent="."]
anims/POPUP_IN = SubResource( 3 )
anims/POPUP_OUT = SubResource( 4 )

[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer/Home" to="." method="_on_Home_pressed"]
[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer/Shop" to="." method="_on_Shop_pressed"]
[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer/Restart" to="." method="_on_Restart_pressed"]
[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer/Continue" to="." method="_on_Continue_pressed"]
